Stashing several articles and layouts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,27 @@
-<html>
+<!doctype html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>NSHipster / {{ page.title }}</title>
+  <meta name="description" content="It's like Pitchfork, for Cocoa!">
+  <meta name="author" content="Mattt Thompson">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/screen.css">
+</head>
+
 <body>
+  <div role="container">
+    <header>
+      <h1>NSHipster</h1>
+    </header>
 
-  {{ content }}
+    <div id="main" role="main">
+      {{ content }}
+    </div>
 
+    <footer>
+      <p>Created by Mattt Thompson</p>
+    </footer>
+  </div>
 </body>
 </html>
