Stashing more changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,13 +6,19 @@
   <meta name="description" content="It's like Pitchfork, for Cocoa!">
   <meta name="author" content="Mattt Thompson">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/screen.css">
+  <link rel="stylesheet" href="/css/screen.css">
 </head>
 
 <body>
   <div role="container">
     <header>
-      <h1>NSHipster</h1>
+      <hgroup>
+        <h1 id="logo">NSHipster</h1>
+      </hgroup>
+
+      <figure>
+        [  ]
+      </figure>
     </header>
 
     <div id="main" role="main">
