--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -1,2 +1,14 @@
 @import "compass/reset"
+@import "blueprint"
+
+@import "./colors"
+@import "./typography"
+@import "./layout"
+
+@import "./components/logo"
+
+@import "./pages/index"
+@import "./pages/post"
+
++blueprint-typography
 
