--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,16 @@ layout: default
 ---
 
 <article>
-  <h1>{{ page.title }}</h1>
+  <header>
+    <h1>{{ page.title }}</h1>
+  </header>
+
   {{ content }}
 </article>
+
+<aside>
+  <p><strong>NSHipster</strong> lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+  consequat.</p>
+</aside>
