--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,12 +13,14 @@
   <div role="container">
     <header>
       <hgroup>
-        <h1 id="logo">NSHipster</h1>
+        <h1 id="logo">
+          <a href="/">
+            <acronym title="NeXT Step">NS</acronym>
+            <strong>Hipster</strong>
+          </a>
+        </h1>
+        <h2>a journal of the overlooked bits in Objective-C</h2>
       </hgroup>
-
-      <figure>
-        [  ]
-      </figure>
     </header>
 
     <div id="main" role="main">
@@ -26,7 +28,8 @@
     </div>
 
     <footer>
-      <p>Created by Mattt Thompson</p>
+      <p>Released under a <a href="http://creativecommons.org/licenses/by-nc/3.0/" rel="license">Creative Commons Attribution-NonCommercial License</a><br/>
+      Created by <a href="https://twitter.com/mattt">Mattt Thompson</a></p>
     </footer>
   </div>
 </body>
