--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -15,9 +15,14 @@ div[role="container"]
   article
     +column(16)
     +append(2)
+    margin-bottom: 2em
 
   article + aside
-    padding-top: 3.75em
+    padding-top: 5.325em
+
+  aside
+    section
+      margin-bottom: 1em
 
   footer
     clear: both
