--- a/sass/_typography.sass
+++ b/sass/_typography.sass
@@ -1,5 +1,5 @@
 html body
-  font-size: 92%
+  font-size: 97%
 
   pre code
     font-size: 83%
@@ -11,3 +11,26 @@ article
   h1
     font-weight: 700
     font-size: 2em
+
+  code
+    color: #555
+
+  pre code
+    color: #000
+
+  blockquote
+    border-left: 4px #eee solid
+    padding-left: 1em
+
+aside
+  h1
+    font-size: 1.5em
+
+a
+  color: $accent-color !important
+
+  &:link
+    text-decoration: none
+
+  &:hover
+    text-decoration: underline
