--- a/sass/components/_logo.sass
+++ b/sass/components/_logo.sass
@@ -1,14 +1,41 @@
 #logo
-  padding: 0.5em
-  border: 6px $accent-color solid
-  display: inline-block !important
+  font-size: 1em
+
+  a
+    text-decoration: none !important
+
+    &:active
+      acronym
+        color: #666
+
+  acronym
+    font-size: 10em
+    font-weight: 900
+    border-bottom: none
+    color: $accent-color
+    letter-spacing: -0.12em
+
+  strong
+    position: absolute
+    display: block
+    float: left
+
+    width: 200px
+    height: 130px
+    background: image-url("moustache.svg") center center no-repeat
+    background-size: 360px 200px
+    margin-top: -124px
+    text-indent: -9999px
+    color: transparent
+    +opacity(50%)
 
 header hgroup
-  +column(16)
-  +append(1)
+  h1
+    +column(4)
+    +append(3)
 
   h2
-    padding: 0 1em
+    +column(10)
     font-style: italic
 
 figure
