Adding Mint script

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,5 +32,6 @@
       Created by <a href="https://twitter.com/mattt">Mattt Thompson</a></p>
     </footer>
   </div>
+  <script src='http://static.matttthompson.com/mint/?js' type='text/javascript'></script>
 </body>
 </html>
