--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>NSHipster / {{ page.title }}</title>
+  <title>{{ page.title }}</title>
   <meta name="description" content="It's like Pitchfork, for Cocoa!">
   <meta name="author" content="Mattt Thompson">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,15 +12,20 @@
 <body>
   <div role="container">
     <header>
-      <hgroup>
-        <h1 id="logo">
-          <a href="/">
-            <acronym title="NeXT Step">NS</acronym>
-            <strong>Hipster</strong>
-          </a>
-        </h1>
-        <h2>a journal of the overlooked bits in Objective-C</h2>
-      </hgroup>
+      <h1 id="logo">
+        <a href="/">
+          <acronym title="NeXT Step">NS</acronym>
+          <strong>Hipster</strong>
+          <img id="moustache" src="/images/moustache.svg"/>
+        </a>
+      </h1>
+
+      {% unless page.id %}
+        <aside>
+          <span>{{ site.description }}</span>
+        </aside>
+      {% endunless %}
+
     </header>
 
     <div id="main" role="main">
@@ -28,8 +33,10 @@
     </div>
 
     <footer>
-      <p>Released under a <a href="http://creativecommons.org/licenses/by-nc/3.0/" rel="license">Creative Commons Attribution-NonCommercial License</a><br/>
-      Created by <a href="https://twitter.com/mattt">Mattt Thompson</a></p>
+      <p>
+        Created by <a href="https://twitter.com/mattt">Mattt Thompson</a>, and released under a <a href="http://creativecommons.org/licenses/by-nc/3.0/" rel="license">Creative Commons Attribution-NonCommercial License.</a><br/>
+        <small>Moustache graphic courtesy of <a href="http://thenounproject.com/noun/mustache/#icon-No1642">The Noun Project</a>.</small>
+      </p>
     </footer>
   </div>
   <script src='http://static.matttthompson.com/mint/?js' type='text/javascript'></script>
