--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,20 +4,22 @@ layout: default
 
 <article>
   <header>
-    <h1>{{ page.title }}</h1>
+    <h1><a href="{{ page.url }}">{{ page.title }}</a></h1>
   </header>
 
   {{ content }}
 </article>
 
 <aside>
-  <p><strong>NSHipster</strong> is a publication about great Objective-C features and Cocoa APIs that you should know about.</p>
+  <p>{{ site.description }}</p>
 
   <section class="archive">
     <h1>Archive</h1>
     <ul>
       {% for post in site.posts %}
-        <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+        {% if post.url != page.url %}
+          <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+        {% endif %}
       {% endfor %}
     </ul>
   </section>
