--- a/sass/components/_logo.sass
+++ b/sass/components/_logo.sass
@@ -1,8 +1,16 @@
 #logo
   font-size: 1em
+  margin-left: -10px
+  margin-top: -1em
 
   a
     text-decoration: none !important
+    padding: 0
+    margin: 0
+
+    &:hover
+      #moustache
+        -webkit-animation: tada 1s
 
     &:active
       acronym
@@ -15,46 +23,17 @@
     color: $accent-color
     letter-spacing: -0.12em
 
+
   strong
+    text-indent: -9999px
+    color: transparent
+
+  #moustache
     position: absolute
     display: block
     float: left
 
     width: 200px
-    height: 130px
-    background: image-url("moustache.svg") center center no-repeat
-    background-size: 360px 200px
-    margin-top: -124px
-    text-indent: -9999px
-    color: transparent
-    +opacity(50%)
-
-header hgroup
-  h1
-    +column(4)
-    +append(3)
-
-  h2
-    +column(10)
-    font-style: italic
-
-figure
-  +column(4, true)
-  margin-right: -40px
-  margin-top: -35px
-  font-size: 7.5em
-  font-weight: bold
-  font-family: menlo, mono-space
-  color: $accent-color
-  width: 300px
-
-  background: url("/images/moustache.svg") center center no-repeat
-
-  text-align: center
-
-  img
-    width: 200px
-    height: 180px
-    display: inline-block
-    display: none
-
+    height: 170px
+    margin-top: -154px
+    +opacity(0.9)
