--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,10 +3,16 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>{{ page.title }}</title>
-  <meta name="description" content="It's like Pitchfork, for Cocoa!">
+  <meta name="description" content="{{ site.description }}">
   <meta name="author" content="Mattt Thompson">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">
   <link rel="stylesheet" href="/css/screen.css">
+
+  <meta content='{{ site.title }}' property='og:title' />
+  <meta content='{{ site.url }}' property='og:url' />
+  <meta content='{{ site.title }}' property='og:site_name' />
+  <meta content='{{ site.description }}' property='og:description' />
 </head>
 
 <body>
