More tweaks and more meta tags

--- a/sass/_typography.sass
+++ b/sass/_typography.sass
@@ -50,3 +50,13 @@ pre code
   background: #f1f1f1
   white-space: pre-wrap
   padding: +span(1) / 2
+
+
+table
+  border-spacing: 0
+  border-collapse: collapse
+  margin: 1em 0
+
+  thead th
+    background: transparent
+    border-bottom: 1px #ccc solid
