--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
   <title>{{ page.title }}</title>
   <meta name="description" content="{{ site.description }}">
   <meta name="author" content="Mattt Thompson">
+  <meta name="revisit-after" content="3 days">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">
   <link rel="stylesheet" href="/css/screen.css">
