Where _is_ that moustache?

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
         <a href="/">
           <acronym title="NeXT Step">NS</acronym>
           <strong>Hipster</strong>
-          <img id="moustache" src="/images/moustache.svg"/>
+          <img id="moustache" src="{{site.url}}/images/moustache.svg"/>
         </a>
       </h1>
 
