--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,20 @@
 <!doctype html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta charset="utf-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
   <title>{{ page.title }}</title>
-  <meta name="description" content="{{ site.description }}">
-  <meta name="author" content="Mattt Thompson">
-  <meta name="revisit-after" content="3 days">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">
-  <link rel="stylesheet" href="/css/screen.css">
+  <meta name="description" content="{{ site.description }}"/>
+  <meta name="author" content="Mattt Thompson"/>
+  <meta name="revisit-after" content="3 days"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"/>
+  <link rel="alternate" type="application/rss+xml" title="RSS" href="http://feeds.feedburner.com/NSHipster"/>
+  <link rel="stylesheet" href="/css/screen.css"/>
 
-  <meta content='{{ site.title }}' property='og:title' />
-  <meta content='{{ site.url }}' property='og:url' />
-  <meta content='{{ site.title }}' property='og:site_name' />
-  <meta content='{{ site.description }}' property='og:description' />
+  <meta content='{{ site.title }}' property='og:title'/>
+  <meta content='{{ site.url }}' property='og:url'/>
+  <meta content='{{ site.title }}' property='og:site_name'/>
+  <meta content='{{ site.description }}' property='og:description'/>
 </head>
 
 <body>
