Fixing sidebar archives links

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ layout: default
     <h1>Archive</h1>
     <ul>
       {% for post in site.posts %}
-        {% if post.url != page.url %}
+        {% if post.id != page.id %}
           <li><a href="{{ post.url }}">{{ post.title }}</a></li>
         {% endif %}
       {% endfor %}
