Adding Open Graph image

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
 
   <meta content='{{ site.title }}' property='og:title'/>
   <meta content='{{ site.url }}' property='og:url'/>
+  <meta content='{{ site.url }}/images/nshipster.png' property='og:image'/>
   <meta content='{{ site.title }}' property='og:site_name'/>
   <meta content='{{ site.description | strip_html }}' property='og:description'/>
 </head>
