Period _outside_ link. Yep.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
 
     <footer>
       <p>
-        Created by <a href="https://twitter.com/mattt">Mattt Thompson</a>, and released under a <a href="http://creativecommons.org/licenses/by-nc/3.0/" rel="license">Creative Commons Attribution-NonCommercial License.</a><br/>
+        Created by <a href="https://twitter.com/mattt">Mattt Thompson</a>, and released under a <a href="http://creativecommons.org/licenses/by-nc/3.0/" rel="license">Creative Commons Attribution-NonCommercial License</a>.<br/>
         <small>Moustache graphic courtesy of <a href="http://thenounproject.com/noun/mustache/#icon-No1642">The Noun Project</a>.</small>
       </p>
     </footer>
