--- a/sass/_typography.sass
+++ b/sass/_typography.sass
@@ -60,3 +60,20 @@ table
   thead th
     background: transparent
     border-bottom: 1px #ccc solid
+
+footer
+  aside
+    a
+      margin-left: 0.25em
+      padding: 0.25em
+      text-decoration: none
+
+      &:hover, &:active
+        +border-radius(5px)
+        background: red
+        color: white
+
+        &:before
+          color: white
+
+
