--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,10 +41,20 @@
     </div>
 
     <footer>
-      <p>
-        Created by <a href="https://twitter.com/mattt">Mattt Thompson</a>, and released under a <a href="http://creativecommons.org/licenses/by-nc/3.0/" rel="license">Creative Commons Attribution-NonCommercial License</a>.<br/>
-        <small>Moustache graphic courtesy of <a href="http://thenounproject.com/noun/mustache/#icon-No1642">The Noun Project</a>.</small>
-      </p>
+      <section class="credits colophon">
+        <p>
+          <span aria-hidden="true" class="icon-creative-commons"></span>
+          Created by <a href="https://twitter.com/mattt">Mattt Thompson</a>, and released under a <a href="http://creativecommons.org/licenses/by-nc/3.0/" rel="license">Creative Commons BY-NC License</a>.
+          <br/>
+          <small>Moustache graphic courtesy of <a href="http://thenounproject.com/noun/mustache/#icon-No1642">The Noun Project</a>. Icons by <a href="http://keyamoon.com/icomoon/">IcoMoon</a>.</small>
+          <br/>
+        </p>
+      </section>
+
+      <aside class="links">
+        <a href="https://twitter.com/nshipster" class="icon-twitter" title="Twitter" aria-hidden="true" ></a>
+        <a href="http://feeds.feedburner.com/NSHipster" class="icon-feed" title="RSS" aria-hidden="true"></a>
+      </aside>
     </footer>
   </div>
   <script src='http://static.matttthompson.com/mint/?js' type='text/javascript'></script>
