Changing link to mattt.me

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
       <section class="credits colophon">
         <p>
           <span aria-hidden="true" class="icon-creative-commons"></span>
-          Created by <a href="https://twitter.com/mattt">Mattt Thompson</a>, and released under a <a href="http://creativecommons.org/licenses/by-nc/3.0/" rel="license">Creative Commons BY-NC License</a>.
+          Created by <a href="http://mattt.me">Mattt Thompson</a>, and released under a <a href="http://creativecommons.org/licenses/by-nc/3.0/" rel="license">Creative Commons BY-NC License</a>.
           <br/>
           <small>Moustache graphic courtesy of <a href="http://thenounproject.com/noun/mustache/#icon-No1642">The Noun Project</a>. Icons by <a href="http://keyamoon.com/icomoon/">IcoMoon</a>.</small>
           <br/>
