--- a/sass/_functions.sass
+++ b/sass/_functions.sass
@@ -5,3 +5,8 @@
   -moz-user-select: none
   -ms-user-select: none
   user-select: none
+
+=animation($animation)
+  animation: $animation
+  -webkit-animation: $animation
+  -moz-animation: $animation
