--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -16,9 +16,16 @@ div[role="container"]
 
     aside
       +column(17)
+      padding-top: 2em
+
+    margin-bottom: 3em
 
   div[role="main"]
     +clearfix
+
+  section
+    +clearfix
+    clear: both
 
   article
     +column(16)
@@ -30,6 +37,9 @@ div[role="container"]
     border-top: 1px #eee solid
     margin-top: 3em
     padding-top: 3em
+
+    small
+      margin-left: 1.6em
 
     section
       +column(20)
