--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -6,6 +6,7 @@
 @import "./fonts"
 @import "./typography"
 @import "./layout"
+@import "./characters"
 @import "./animations"
 
 @import "./components/logo"
@@ -15,3 +16,5 @@
 
 +blueprint-typography
 
+html body
+  background: #fdfcfa image-url("bg.jpg") center center
