--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,6 +14,11 @@ layout: default
 <aside>
   <p>{{ site.description }}</p>
 
+  <figure id="suit">
+    <figcaption>Though bearing a striking resemblence to Sam Soffes, our lawyers can assure you that resemblance to real persons, living, dead, and/or mustacioed, is purely coincidental.</figcaption>
+  </figure>
+
+
   <section class="archive">
     <h1>Archive</h1>
     <ul>
