--- a/sass/_animations.sass
+++ b/sass/_animations.sass
@@ -1,3 +1,63 @@
+@-webkit-keyframes bounce
+  0%, 20%, 50%, 80%, 100%
+    -webkit-transform: translateY(0)
+  40%
+    -webkit-transform: translateY(-30px)
+  60%
+    -webkit-transform: translateY(-15px)
+    
+@-webkit-keyframes derp
+  0%, 50%, 100%
+    +rotate3d(0, 0, 0, 0deg)
+  20%, 25%
+    +rotate3d(0, 0, 0, -30deg)
+  70%, 75%
+    +rotate3d(0, 0, 0, 30deg)
+
+@-webkit-keyframes pulse
+  0%
+    -webkit-transform: scale(1)
+  50%
+    -webkit-transform: scale(1.1)
+  100%
+    -webkit-transform: scale(1)
+
+@-webkit-keyframes shake
+  0%, 100%
+    -webkit-transform: translateX(0)
+  30%, 50%, 70%
+    -webkit-transform: translateX(10px)
+  40%, 60%, 80%
+    -webkit-transform: translateX(-10px)
+
+@-webkit-keyframes charge
+  0%, 100%
+    -webkit-transform: translateX(0) rotate(0deg)
+  10%, 20%
+    -webkit-transform: translateX(10px) rotate(-2deg)
+  30%, 35%
+    -webkit-transform: translateX(20px) rotate(5deg)
+  59%
+    -webkit-transform: translateX(20px) rotate(-15deg)
+  60%
+    -webkit-transform: translateX(-89px) rotate(-15deg)
+  75%
+    -webkit-transform: translateX(-15px) rotate(20deg)
+
+@-webkit-keyframes swing
+  20%, 40%, 60%, 80%, 100%
+    -webkit-transform-origin: top center
+  20%
+    -webkit-transform: rotate(15deg)
+  40%
+    -webkit-transform: rotate(-10deg)
+  60%
+    -webkit-transform: rotate(5deg)
+  80%
+    -webkit-transform: rotate(-5deg)
+  100%
+    -webkit-transform: rotate(0deg)
+    
 @-webkit-keyframes tada
   0%
     -webkit-transform: scale(1)
