--- a/sass/pages/_index.sass
+++ b/sass/pages/_index.sass
@@ -1,11 +1,41 @@
-#posts article
-  +column(11)
-  +append(2)
-  clear: left
-  margin-bottom: 2em
-  padding-bottom: 1em
+#latest
+  article
+    +column(16, true)
+    padding-bottom: 1em
 
-  &:nth-child(even)
-    +column(11, true)
-    clear: right
-    padding-right: 0
+    a
+      color: $secondary-color !important
+
+  figure
+    +prevent-selection
+    margin-left: +span(18)
+    position: absolute
+    width: 200px
+    height: 250px
+    display: block
+    padding: 10px
+
+  hgroup
+    small
+      font-size: 1.25em
+    h1
+      font-size: 3em
+
+#archive
+  border-top: 1px #eee solid
+  padding-top: 3em
+
+  article
+    +column(11)
+    +append(2)
+    clear: left
+    margin-bottom: 2em
+    padding-bottom: 1em
+
+    &:nth-child(even)
+      +column(11, true)
+      clear: right
+      padding-right: 0
+
+    h1
+      font-size: 2em
