--- a/sass/pages/_post.sass
+++ b/sass/pages/_post.sass
@@ -1,7 +1,7 @@
 article + aside
   +column(6, true)
   float: right
-  padding-top: 3.9em
+  padding-top: 4.5em
 
   p
     margin-bottom: 2.5em
@@ -12,3 +12,12 @@ article + aside
 aside
   section
     margin-bottom: 1em
+
+
+  figure
+    +prevent-selection
+    width: 158px
+    height: 250px
+    display: block
+    padding: 10px
+    margin-left: 15px
