Adding responsive mobile styles

--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -51,3 +51,30 @@ div[role="container"]
 
       a
         font-size: 2em
+
+@media screen and (max-width: 640px)
+  html, body
+    padding: 10px
+
+  div[role="container"]
+    width: 100%
+
+  #logo
+    margin: 0 auto
+  header, footer, article, aside
+    width: 100% !important
+
+
+  article
+    blockquote
+      margin-left: 5px !important
+
+    table
+      display: inline-block
+
+  aside
+    clear: both
+    margin: 10px auto
+
+  figure 
+    display: none !important
