--- a/sass/_typography.sass
+++ b/sass/_typography.sass
@@ -44,6 +44,9 @@ article
     border-bottom: 1px #eee solid
     margin: 2em 0
 
+  ul
+    li
+      margin-bottom: 1em
 
 aside
   h1
@@ -95,3 +98,4 @@ footer
 figure
   figcaption
     display: none
+    
