Using proper, unobtrusive CSS selectors for Typekit

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
 
       {% unless page.id %}
         <aside>
-          <span class="tk-ff-providence-web-pro">{{ site.description }}</span>
+          <span>{{ site.description }}</span>
         </aside>
       {% endunless %}
 
