Adding viewport tag
Optimizing mobile CSS

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
   <title>{{ page.title }}</title>
   <meta name="description" content="{{ site.description | strip_html }}"/>
+  <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0"/>
   <meta name="author" content="Mattt Thompson"/>
   <meta name="revisit-after" content="3 days"/>
   <link rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"/>
