--- a/sass/components/_logo.sass
+++ b/sass/components/_logo.sass
@@ -27,10 +27,8 @@
     color: $primary-color
     letter-spacing: -0.13em
 
-
   strong
-    text-indent: -9999px
-    color: transparent
+    display: none
 
   #moustache
     position: absolute
