Introducing a hip chick for the NSLocale post

--- a/sass/_characters.sass
+++ b/sass/_characters.sass
@@ -4,6 +4,12 @@ figure#goat
   &:hover
     +animation(charge 2s)
 
+figure#chick
+  background: image-url("chick.png") top center no-repeat
+  
+  &:hover
+    +animation(jump 1s)
+
 figure#suit
   background: image-url("suit.png") top center no-repeat
   
