Adding Tweet button to sidebar
Adding author and timestamp to sidebar

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,17 @@ layout: default
 </article>
 
 <aside>
+  <p><a href="https://twitter.com/share" class="twitter-share-button" data-url="{{ site.url}}{{ page.url }}" data-via="NSHipster" data-size="large">Tweet</a></p>
+
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+  <p>
+    Written by <a href="http://mattt.me">Mattt Thompson</a><br/>
+    Posted on <time pubdate="{{ page.date }}">{{ page.date | date: '%B %d, %Y' }}</time>
+  </p>
+
+  <hr/>
+
   <p>{{ site.description }}</p>
 
   <figure id="suit">
