--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,20 +11,20 @@
   <link rel="alternate" type="application/rss+xml" title="RSS" href="http://feeds.feedburner.com/NSHipster"/>
   <link rel="stylesheet" href="/css/screen.css"/>
 
-  <meta content='{{ site.title }}' property='og:site_name'/>
-  <meta content='{{ site.url }}/images/suit.png' property='og:image'/>
+  <meta content="{{ site.title }}" property="og:site_name"/>
+  <meta content="{{ site.url }}/images/suit.png" property="og:image"/>
   {% if page.id %}
-    <meta content='{{ page.title }}' property='og:title'/>
-    <meta content='{{ site.url }}{{ page.url }}' property='og:url'/>
+    <meta content="{{ page.title }}" property="og:title"/>
+    <meta content="{{ site.url }}{{ page.url }}" property="og:url"/>
     {% if page.description %}
-      <meta content='{{ page.description | strip_html }}' property='og:description'/>
+      <meta content="{{ page.description | strip_html | escape }}" property="og:description"/>
     {% else %}
-      <meta content='{{ page.content | truncate: 250 | strip_html }}' property='og:description'/>
+      <meta content="{{ page.content | truncate: 250 | strip_html | escape }}" property="og:description"/>
     {% endif %}
   {% else %}
-    <meta content='{{ site.title }}' property='og:title'/>
-    <meta content='{{ site.url }}' property='og:url'/>
-    <meta content='{{ site.description | strip_html }}' property='og:description'/>
+    <meta content="{{ site.title }}" property="og:title"/>
+    <meta content="{{ site.url }}" property="og:url"/>
+    <meta content="{{ site.description | strip_html | escape}}" property="og:description"/>
   {% endif %}
 
   <script type="text/javascript" src="//use.typekit.net/nlj2rqt.js"></script>
