Adding corgi and animation

--- a/sass/_animations.sass
+++ b/sass/_animations.sass
@@ -38,6 +38,18 @@
   100%
     -webkit-transform: translateY(0px) scale(1)
 
+@-webkit-keyframes jumpjump
+  0%
+    -webkit-transform: scale(1)
+  10%, 36%
+    -webkit-transform: scale(0.9) rotate(-2deg)
+  43%
+    -webkit-transform: translateY(-50px) rotate(5deg) scale(1)
+  73%
+    -webkit-transform: translateY(-30px) rotate(-2deg) scale(1)
+  60%, 65%, 100%
+    -webkit-transform: translateY(0px) scale(1)
+
 @-webkit-keyframes pulse
   0%
     -webkit-transform: scale(1)
