--- a/sass/_characters.sass
+++ b/sass/_characters.sass
@@ -10,6 +10,12 @@ figure#chick
   &:hover
     +animation(jump 1s)
 
+figure#corgi
+  background: image-url("corgi.png") top center no-repeat
+  
+  &:hover
+    +animation(jumpjump 1s)
+
 figure#suit
   background: image-url("suit.png") top center no-repeat
   
