Hipster Mallard: Quacks in a tunnel... hears echo of Wayne Coyne circa 2003

--- a/sass/_characters.sass
+++ b/sass/_characters.sass
@@ -16,6 +16,12 @@ figure#corgi
   &:hover
     +animation(jumpjump 1s)
 
+figure#duck
+  background: image-url("duck.png") top center no-repeat
+  
+  &:hover
+    +animation(derp 1.4s)
+
 figure#suit
   background: image-url("suit.png") top center no-repeat
   
