--- a/sass/_characters.sass
+++ b/sass/_characters.sass
@@ -22,6 +22,12 @@ figure#duck
   &:hover
     +animation(derp 1.4s)
 
+figure#owl
+  background: image-url("owl.png") top center no-repeat
+  
+  &:hover
+    +animation(pulse 2.0s)
+
 figure#suit
   background: image-url("suit.png") top center no-repeat
   
