Switching over to self-hosted RSS feed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Mattt Thompson"/>
   <meta name="revisit-after" content="3 days"/>
   <link rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"/>
-  <link rel="alternate" type="application/rss+xml" title="RSS" href="http://feeds.feedburner.com/NSHipster"/>
+  <link rel="alternate" type="application/rss+xml" title="RSS" href="http://nshipster.com/feed.xml"/>
   <link rel="stylesheet" href="/css/screen.css"/>
 
   <meta content="{{ site.title }}" property="og:site_name"/>
@@ -75,7 +75,7 @@
 
       <aside class="links">
         <a href="https://twitter.com/nshipster" class="icon-twitter" title="Twitter" aria-hidden="true" ></a>
-        <a href="http://feeds.feedburner.com/NSHipster" class="icon-feed" title="RSS" aria-hidden="true"></a>
+        <a href="http://nshipster.com/feed.xml" class="icon-feed" title="RSS" aria-hidden="true"></a>
       </aside>
     </footer>
   </div>
