Improving mobile stylesheet

--- a/assets/sass/_mobile.sass
+++ b/assets/sass/_mobile.sass
@@ -121,7 +121,7 @@
             padding: 1em 10px
 
   .promotion
-    #cover
+    #cover, #cfhipsterref-cover
       float: none !important
       margin: 2em auto !important
       display: block !important
