--- a/nshipster.ru/_layouts/default.html
+++ b/nshipster.ru/_layouts/default.html
@@ -18,7 +18,12 @@
   <link rel="alternate" hreflang="ru-RU" href="http://nshipster.ru"/>
   <link rel="alternate" hreflang="x-default" href="http://nshipster.com"/>
   <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ site.url }}/feed.xml"/>
-  <link rel="stylesheet" href="/css/screen.css"/>
+  <link rel="stylesheet"  type="text/css" href="/css/screen.css"/>
+  <link rel="apple-touch-icon" href="touch-icon-iphone.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="touch-icon-ipad.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="touch-icon-iphone-retina.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="touch-icon-ipad-retina.png">
+  <link rel="icon" href="/favicon.ico" sizes="16x16 24x24 32x32 48x48 64x64" type="image/vnd.microsoft.icon">
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@NSHipster">
@@ -126,19 +131,5 @@
       {% endif %}
     </footer>
   </div>
-
-  <script type="text/javascript">
-    var _gauges = _gauges || [];
-    (function() {
-      var t   = document.createElement('script');
-      t.type  = 'text/javascript';
-      t.async = true;
-      t.id    = 'gauges-tracker';
-      t.setAttribute('data-site-id', '52ddb711de2e264f7800002d');
-      t.src = '//secure.gaug.es/track.js';
-      var s = document.getElementsByTagName('script')[0];
-      s.parentNode.insertBefore(t, s);
-    })();
-  </script>
 </body>
 </html>
