Fixing stylizing of subtitle in Chinese site

--- a/assets/sass/components/_logo.sass
+++ b/assets/sass/components/_logo.sass
@@ -29,11 +29,16 @@
   strong
     display: none
 
+  em
+    clear: both
+    display: block
+    text-align: center
+    width: 126px
+
   #moustache
     position: absolute
     display: block
     float: left
-
 
     margin-top: -140px
     margin-left: -31px
