--- a/nshipster.com/_layouts/post.html
+++ b/nshipster.com/_layouts/post.html
@@ -17,12 +17,24 @@ layout: default
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
   </aside>
 
-  <footer id="book" class="promotion">
-    <a href="https://gum.co/cfhipsterref"><div id="cfhipsterref-cover"></div></a>
+  <footer class="book promotion">
+    <a href="https://gum.co/the-nshipster-fake-book"><div id="the-nshipster-fake-book-cover" class="cover"></div></a>
+    <div>
+      <hgroup>
+        <h1><a href="https://gum.co/the-nshipster-fake-book">The NSHipster Fake Book: 200+ Objective-C Licks for iOS &amp; Mac OS X Developers</a></h1>
+        <h2>Available Now</h2>
+      </hgroup>
+      <p>Over 200 code samples, ranging from the beginner and basic to the expert and obscure, across a variety of genres and use cases. Without any needless explanation.</p>
+      <button onclick="javascript:window.location.href='https://gum.co/the-nshipster-fake-book'">Get It Now</button>
+    </div>
+  </footer>
+
+  <footer class="book promotion">
+    <a href="https://gum.co/cfhipsterref"><div id="cfhipsterref-cover" class="cover"></div></a>
     <div>
       <hgroup>
         <h1><a href="https://gum.co/cfhipsterref">CFHipsterRef: Low-Level Programming on<br/>iOS &amp; Mac OS X</a></h1>
-        <h2>Available May 27th, 2014</h2>
+        <h2>Available Soon</h2>
       </hgroup>
       <p>Perfect for intermediate and expert developers wanting to take a deeper dive into advanced topics, <em>CFHipsterRef: Low-Level Programming on iOS &amp; Mac OS X</em> covers the core technologies powering Cocoa, Objective-C, and the operating system itself, including Core Bluetooth, Accelerate, and the Objective-C runtime.</p>
       <button onclick="javascript:window.location.href='https://gum.co/cfhipsterref'">Pre-Order Now</button>
