--- a/assets/sass/_promotion.sass
+++ b/assets/sass/_promotion.sass
@@ -26,7 +26,7 @@
 
   @media (-webkit-min-device-pixel-ratio:2)
     #cfhipsterref-cover
-      background-image: url('//cdn.nshipster.com/images/book-cover@2x.png')
+      background-image: url('//cdn.nshipster.com/images/cfhipsterref-cover@2x.png')
 
   div
     +column(18)
