Updating CFHipsterRef book details

--- a/nshipster.com/_layouts/post.html
+++ b/nshipster.com/_layouts/post.html
@@ -34,10 +34,10 @@ layout: default
     <div>
       <hgroup>
         <h1><a href="https://gum.co/cfhipsterref">CFHipsterRef: Low-Level Programming on<br/>iOS &amp; Mac OS X</a></h1>
-        <h2>Available Soon</h2>
+        <h2>Available in Beta</h2>
       </hgroup>
       <p>Perfect for intermediate and expert developers wanting to take a deeper dive into advanced topics, <em>CFHipsterRef: Low-Level Programming on iOS &amp; Mac OS X</em> covers the core technologies powering Cocoa, Objective-C, and the operating system itself, including Core Bluetooth, Accelerate, and the Objective-C runtime.</p>
-      <button onclick="javascript:window.location.href='https://gum.co/cfhipsterref'">Pre-Order Now</button>
+      <button onclick="javascript:window.location.href='https://gum.co/cfhipsterref'">Get It Now</button>
     </div>
   </footer>
 </article>
