Updating Creative Commons license

--- a/nshipster.com/_layouts/default.html
+++ b/nshipster.com/_layouts/default.html
@@ -19,7 +19,7 @@
   <meta name="author" content="Mattt Thompson"/>
   <meta name="revisit-after" content="3 days"/>
   <meta name="viewport" content="width=device-width"/>
-  <link rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"/>
+  <link rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"/>
   <link rel="alternate" hreflang="en-us" href="http://nshipster.com"/>
   <link rel="alternate" hreflang="zh-Hans" href="http://nshipster.cn"/>
   <link rel="alternate" hreflang="x-default" href="http://nshipster.com"/>
@@ -103,7 +103,7 @@
         <p>
           <span aria-hidden="true" class="icon-creative-commons"></span>
 
-          Created by <a href="http://mattt.me">Mattt Thompson</a>, and released under a <a href="http://creativecommons.org/licenses/by-nc/3.0/" rel="license">Creative Commons BY-NC License</a>.
+          Created by <a href="http://mattt.me">Mattt Thompson</a>, and released under a <a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license">Creative Commons BY-NC License</a>.
 
           <a href="https://plus.google.com/106751358503565042647?rel=author" style="display: none;"></a>
         </p>
@@ -138,7 +138,7 @@
     </footer>
   </div>
 
-  <script type="text/javascript">
+  <script>
     var Swiftype = window.Swiftype || {};
     (function() {
       Swiftype.key = 'Q5jNBiR8qVs5xE5dNect';
