--- a/nshipster.com/_layouts/post.html
+++ b/nshipster.com/_layouts/post.html
@@ -5,7 +5,10 @@ layout: default
 <article>
   <header>
     <h1><a href="{{ page.url }}">{{ page.title | camel_break }}</a></h1>
-    <h2> Written by <a href="http://mattt.me/">Mattt Thompson</a> on <time pubdate="{{ page.date }}">{{ page.date | ordinalize }}</time></h2>
+    <h2>Written by <a href="http://mattt.me/">Mattt Thompson</a> on <time datetime="{{ page.date }}" pubdate="{{ page.date }}">{{ page.date | ordinalize }}</time></h2>
+    {% if page.updated %}
+      <h3>Updated <time datetime="{{ page.updated }}">{{ page.updated | ordinalize }}</time></h3>
+    {% endif %}
   </header>
 
   <div class="content" data-swiftype-index="true">
