Updating _typography.sass

--- a/assets/sass/_typography.sass
+++ b/assets/sass/_typography.sass
@@ -35,6 +35,11 @@ article
       font-style: italic
       opacity: 0.5
 
+    h3
+      font-size: 0.75em
+      font-weight: 500
+      opacity: 0.5
+
   h1
     font-weight: 700
     font-style: italic
